# ThinkGraph

./: .gitignore  README.md  \  docker-compose.yaml
backend/: Dockerfile  db.sqlite3  pyproject.toml
backend/core/: settings.py  urls.py  views.py
frontend/: Dockerfile  package.json
frontend/src/: App.tsx  DisplayTest.tsx  QueryComponent.tsx  ResponseHandlerComponent.tsx  ThinkGraphMain.tsx  index.html
