[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "django-stubs>=6.0.4",
    "djangorestframework>=3.17.1",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "google-genai>=2.3.0",
    "google-generativeai>=0.8.6",
    "langchain>=0.3.30",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.0.10",
    "pypdf>=6.11.0",
    "tavily-python>=0.7.24",
]
